--- a/.github/workflows/build_android.yml
+++ b/.github/workflows/build_android.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Build Web Assets
         run: npm run build
 
+      - name: Sync Capacitor
+        run: npx cap sync android
+
       - name: Setup Java
         uses: actions/setup-java@v4
         with:
