--- a/package.json
+++ b/package.json
@@ -34,7 +34,10 @@
     "@capacitor/android": "^8.0.0",
     "@capacitor/cli": "^8.0.0",
     "@capacitor/core": "^8.0.0",
+    "@capacitor/filesystem": "^8.0.0",
+    "@capacitor/share": "^8.0.0",
     "docx": "^9.5.1",
+    "electron-squirrel-startup": "^1.0.1",
     "file-saver": "^2.0.5",
     "idb": "^8.0.3",
     "jspdf": "^3.0.4",
